--- a/nginx-proxy.yml
+++ b/nginx-proxy.yml
@@ -1,7 +1,8 @@
 version: '3.3'
 services:
   app:
-    image: 'jc21/nginx-proxy-manager:latest'
+    # image: 'jc21/nginx-proxy-manager:latest'
+    image: 'jc21/nginx-proxy-manager:github-pr-2971'
     ports:
       - '80:80'
       - '81:81'
