--- a/nginx-proxy.yml
+++ b/nginx-proxy.yml
@@ -1,8 +1,7 @@
 version: '3.3'
 services:
   app:
-    # image: 'jc21/nginx-proxy-manager:latest'
-    image: 'jc21/nginx-proxy-manager:github-pr-2971'
+    image: 'jc21/nginx-proxy-manager:latest'
     ports:
       - '80:80'
       - '81:81'
